Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/Covar3.out
Covar3.java:19:10: compiler.err.ref.ambiguous: f, kindname.method, f(T), covar3.Test3, kindname.method, f(java.lang.String), covar3.Test3
1 error
